--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body{
+  background-color: rgb(0, 0, 0);
+}
+h1,h4,p,a{
+  color: white;
+  text-decoration: none;
+}
+ul{
+ list-style-type: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn{
+  /* width: 1rem; */
+ padding: 10px 30px;
+ font-size: 1rem;
+ text-transform: uppercase;
+ background-color: rgba(87, 20, 14, 0.867);
+ cursor: pointer;
+ border: 2px solid white;
+ border-radius: 10px;
+}
+.btn-light{
+ background: transparent;
+ color: aliceblue;
+ border: 2px solid white;
+}
+.btn:hover{
+  background-color: rgba(44, 44, 44, 0.589);
+  color: aliceblue;
+  transition: 0.4s;
+  text-shadow: 2px 2px 3px red;
 }
