--- a/src/components/AboutContainer.css
+++ b/src/components/AboutContainer.css
@@ -3,7 +3,7 @@
 
 #About_page {
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
     /* box-shadow: inset 0 0 20px #04a4b69b; */
     padding: 3rem;
     margin-top: 0.4rem;
@@ -154,8 +154,15 @@
 }
 
 @media screen and (max-width :600px) {
+    #About_page{
+        margin:0;
+        padding: 0.5rem;
+        padding-top: 4rem;
+    }
     .About_container {
+        margin-top: 1rem;
         flex-direction: column;
+        align-items: center;
         padding: 0.5rem;
     }
 
