--- a/src/components/Main_body.css
+++ b/src/components/Main_body.css
@@ -79,3 +79,18 @@
         font-size: 2rem;
     }
 }
+@media screen  and (max-width:500px)
+{
+    .content h1{
+        font-size: 3rem;
+        padding: 0.5rem;
+    }  
+    .content p{
+        font-size: 1.5rem;
+        padding:0;
+        margin: 0;
+    }
+    .tog_btn{
+        margin-top: 2rem;
+    }
+}
