--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -69,3 +69,19 @@
     box-shadow: -1px 1px 10px 10px rgba(247, 255, 2, 0.16);
 
 }
+
+@media screen and (max-width:500px){
+    #image_box{
+        height: 30%;
+        margin: 0;
+        width: 100%;
+        border: 3px solid rgb(249, 211, 39);
+        border-radius: 16%;
+    }
+    #projectBlock{
+        margin: 0.4rem;
+    }
+    .topic{
+        font-size: 1.7rem;
+    }
+}
