--- a/src/components/ProgBody.css
+++ b/src/components/ProgBody.css
@@ -2,12 +2,13 @@
 
 #progbody{
     width: 100%;
-    background-color: rgba(59, 225, 231, 0.081);
+    background-color: rgba(231, 222, 59, 0.081);
     height: 60vh;
     position: relative;
-    box-shadow: inset 0 0 30px #0ac7ad9b;
-    border-radius: 2rem;
+    box-shadow: inset 0 0 30px #0732de47;
+    border-radius: 0 0 2rem 2rem;
     transition: 0.8s;
+    animation: bg_change 5s infinite;
 }
 .bgvdo{
     position: fixed;
@@ -33,11 +34,13 @@
 .heading h1{
     margin: 1rem;
     font-size: 5rem;
+    animation: bipp_lighting 5s infinite;
 }
 .heading p{
     margin: 1rem;
     text-align: center;
     font-size: 1.6rem;
+    animation: bipp_lighting 5s infinite;
 }
 @media screen and (max-width:700px){
     .heading h1{
