--- a/src/components/SkillSet.css
+++ b/src/components/SkillSet.css
@@ -45,6 +45,7 @@
     align-items: center;
     row-gap: 1.5rem;
     box-shadow: inset 0 0 25px #04a4b69b;
+    animation: bg_change 5s infinite;
 }
 .skillContainer:hover{
     background-color: rgba(47, 251, 255, 0.067);
@@ -157,9 +158,11 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
 .leetcode h2{
     padding: 1rem;
     font-size: 4rem;
+    animation: bipp_lighting 5s infinite;
 }
 .leetcode p{
     font-size: 2rem;
+    animation: bipp_lighting 5s infinite;
 }
 
 @media screen and (max-width:1200px) {
@@ -204,6 +207,10 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
 /* for making responsive leetcode part css  */
 @media screen and (max-width:1200px) 
 {
+    .skillBody{
+        display: grid;
+        grid-template-columns: auto auto ;
+    }
     .leetimage{
         height: 3.5rem;
         width: 3.5rem;
@@ -230,6 +237,12 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     .leetcode p{
         font-size: 1rem;
     } 
+}
+@media screen and (max-width:800px) 
+{
+    .skillBody{
+        grid-template-columns: auto ;
+    }
 }
 
 @media screen and (max-width:650px) 
