--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,5 +1,5 @@
 .projectContainer{
-    box-shadow: inset 0 0 50px rgba(204, 255, 1, 0.268);
+    box-shadow: inset 0 0 50px rgba(1, 187, 255, 0.268);
     border-radius: 2rem;
     margin: 0.5rem 0;
 }
@@ -19,7 +19,7 @@
     /* justify-content: center; */
     box-shadow: inset 0 0 50px rgba(204, 255, 1, 0.268);
     background-color: rgba(255, 198, 10, 0.06);
-
+    animation: bg_change 5s infinite;
     overflow: hidden;
 }
 
@@ -30,18 +30,18 @@
     width: 50%;
     border: 3px solid rgba(86, 86, 243, 0.714);
     border-radius: 20%;
-
+    overflow: hidden;
     /* for making around shadow */
     background-color: rgba(97, 244, 242, 0.082);
     -webkit-box-shadow: -1px 1px 5px 9px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -1px 1px 5px 9px rgba(0, 0, 0, 0.75);
-    box-shadow: -1px 1px 10px 20px rgba(247, 255, 2, 0.16);
+    box-shadow: -1px 1px 10px 20px rgba(2, 255, 251, 0.16);
 }
 
 #image_box img {
     height: 100%;
     width: 100%;
-    border-radius: 20%;
+    /* border-radius: 20%; */
 }
 
 .topic {
@@ -73,15 +73,30 @@
 @media screen and (max-width:500px){
     #image_box{
         height: 30%;
-        margin: 0;
-        width: 100%;
+        margin: 1rem;
+        width: 50%;
         border: 3px solid rgb(249, 211, 39);
         border-radius: 16%;
+        overflow: hidden;
     }
     #projectBlock{
         margin: 0.4rem;
     }
     .topic{
         font-size: 1.7rem;
+    }
+}
+@keyframes bg_change {
+    0%{
+        background-image: linear-gradient(to top right, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
+    }
+    33%{
+        background-image: linear-gradient(to bottom right, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
+    }
+    66%{
+        background-image: linear-gradient(to bottom left, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
+    }
+    100%{
+        background-image: linear-gradient(to top left, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
     }
 }
