--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -46,6 +46,29 @@
 }
 .social a{
     font-size: 2.5rem;
+    animation: rotate 1s infinite;
+    border-radius: 3rem;
+    /* border: 2px solid red; */
+    width: 4rem;
+    height: 4rem;
+}
+
+@keyframes rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(72deg);
+    }
+    50%{
+        transform: rotate(144deg);
+    }
+    75%{
+        transform: rotate(216deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 
 @media screen  and (max-width:1300px){
