--- a/src/components/AboutContainer.css
+++ b/src/components/AboutContainer.css
@@ -47,17 +47,17 @@
     margin: 2rem;
 }
 
-.about_image img {
+.profile{
 
     height: 45vh;
     width: 100%;
-    border: 2px solid rgba(52, 242, 232, 0.673);
+    /* border: 2px solid rgba(52, 242, 232, 0.673); */
     border-radius: 40px;
-    box-shadow: 0 3px 30px rgba(22, 215, 225, 0.429);
+    box-shadow: 0 3px 40px rgba(22, 215, 225, 0.429);
 }
 
 .about_image img:hover {
-    box-shadow: 0 5px 50px rgba(22, 215, 225, 0.429);
+    box-shadow: 0 5px 60px rgba(22, 215, 225, 0.429);
 }
 
 .about_content {
