--- a/src/components/SkillSet.css
+++ b/src/components/SkillSet.css
@@ -27,17 +27,23 @@
 }
 .skillBody{
     padding: 1rem;
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row; */
     justify-content: center;
     /* flex-wrap: wrap; */
     border-radius: 2rem;
+}
+.circularSkill{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 .skillContainer{
     margin: 1rem;
     height: 25rem;
     width: 25rem;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     border-radius: 3rem;
     display: flex;
     flex-direction: column;
@@ -251,7 +257,27 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
         padding: 1rem;
     }
     .skillContainer{
-        width: 20rem;
+        margin: 0.5rem;
+        width: 10rem;
+        height: 15rem;
+        padding:1rem;
+        text-align: center;
+    }
+    .circularSkill{
+        display: grid;
+        grid-template-columns: auto auto;
+        
+    }
+    .circular_progress{
+        height: 6rem;
+        width: 6rem;
+    }
+    .circular_progress::before{
+        height: 5rem;
+        width: 5rem;
+    }
+    .progress_val{
+        font-size: 1rem;
     }
     .leetcode{
         width: 60%;
