--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -152,3 +152,9 @@
       transform: translateX(-60%) skewX(-50deg);
     }
   }
+
+  button.rec-dot{
+    background-color: rgb(237, 245, 94);
+    /* box-shadow: 0 0 0 2px rgba(248, 0, 0, 0.5); */
+  }
+  
