--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -44,11 +44,11 @@
     font-weight: bold;
     font-size: 1.2rem;
     font-family: 'Ubuntu', sans-serif;
-    border: 2px solid rgb(0, 195, 255);
+    border: 2.5px solid rgb(0, 195, 255);
     padding: 0.5rem;
     margin: 0.5rem;
     border-radius: 0 1.3rem 0 1.3rem;
-    box-shadow: 0 0 5px rgb(0, 195, 255);
+    /* box-shadow: 0 0 5px rgb(0, 195, 255); */
     transition: all 0.5s ease-in-out;
 }
 
@@ -80,6 +80,11 @@
     width: 100%;
 }
 
+.activeNav{
+    background-color: rgb(0, 243, 251);
+    color: rgb(0, 0, 0);
+    box-shadow: 0 0 10px rgb(0, 195, 255);
+}
 @media screen and (max-width:1040px) {
     .navlinks {
         flex-direction: column;
