--- a/src/components/SkillSet.css
+++ b/src/components/SkillSet.css
@@ -34,10 +34,12 @@
     border-radius: 2rem;
 }
 .circularSkill{
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: row;
+    /* flex-direction: row; */
 }
 .skillContainer{
     margin: 1rem;
@@ -51,7 +53,8 @@
     align-items: center;
     row-gap: 1.5rem;
     box-shadow: inset 0 0 25px #04a4b69b;
-    animation: bg_change 5s infinite;
+    /* animation: bg_change 5s infinite; */
+    background-color: rgba(0, 43, 43, 0.719);
 }
 .skillContainer:hover{
     background-color: rgba(47, 251, 255, 0.067);
@@ -178,8 +181,21 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
         justify-content: center;
         align-items: center;
     }
+    .circularSkill{
+        grid-template-columns: auto auto auto;
+    }
 
-
+    .leetimage{
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+    .leetcode h2{
+        padding: 1rem;
+        font-size: 3rem;
+    }
+    .leetcode p{
+        font-size: 1.5rem;
+    }
     .subject{
         flex-direction: column;
         height: 8rem;
@@ -210,25 +226,6 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     }
 }
 
-/* for making responsive leetcode part css  */
-@media screen and (max-width:1200px) 
-{
-    .skillBody{
-        display: grid;
-        grid-template-columns: auto auto ;
-    }
-    .leetimage{
-        height: 3.5rem;
-        width: 3.5rem;
-    }
-    .leetcode h2{
-        padding: 1rem;
-        font-size: 3rem;
-    }
-    .leetcode p{
-        font-size: 1.5rem;
-    }
-}
 
 @media screen and (max-width:900px) 
 {
