--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* for removing blue shadow while tapping on button on touch screen */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body{
   background-color: rgb(0, 0, 0);
