--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,6 +5,7 @@
     border-radius: 30px;
     box-shadow: inset 0 0 10px #04a4b69b;
     transition: 0.9s;
+    background-image: linear-gradient(to right top, #96989861 , #0067305b);
 }
 .footer:hover{
     background-color: rgba(3, 100, 96, 0.199);
@@ -110,6 +111,9 @@
 }
 @media screen and (max-width:500px)
 {
+    .footer{
+        background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
+    }
     .social a{
         padding:1rem 0;
         font-size: 1.7rem;
