--- a/src/components/ProgBody.css
+++ b/src/components/ProgBody.css
@@ -2,13 +2,14 @@
 
 #progbody{
     width: 100%;
-    background-color: rgba(231, 222, 59, 0.081);
+    background-color: rgba(59, 177, 231, 0.081);
     height: 60vh;
     position: relative;
-    box-shadow: inset 0 0 30px #0732de47;
+    /* box-shadow: inset 0 0 30px #0732de47; */
     border-radius: 0 0 2rem 2rem;
     transition: 0.8s;
-    animation: bg_change 5s infinite;
+    /* animation: bg_change 5s infinite; */
+    background-image: linear-gradient(to right top, #faffff61 , #04fb775b);
 }
 .bgvdo{
     position: fixed;
@@ -40,9 +41,13 @@
     margin: 1rem;
     text-align: center;
     font-size: 1.6rem;
-    animation: bipp_lighting 5s infinite;
+    /* animation: bipp_lighting 5s infinite; */
+    color: black;
 }
 @media screen and (max-width:700px){
+    #progbody{
+        background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
+    }
     .heading h1{
         font-size: 3.5rem;
     } 
