--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,5 +1,6 @@
 .projectContainer{
-    box-shadow: inset 0 0 50px rgba(1, 187, 255, 0.268);
+    /* box-shadow: inset 0 0 50px rgba(1, 187, 255, 0.268); */
+    background-image: linear-gradient(to left bottom, #faffff61 , #04fb775b);
     border-radius: 2rem;
     margin: 0.5rem 0;
 }
@@ -17,9 +18,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    box-shadow: inset 0 0 50px rgba(204, 255, 1, 0.268);
-    background-color: rgba(255, 198, 10, 0.06);
-    animation: bg_change 5s infinite;
+    box-shadow: inset 0 0 50px rgba(79, 245, 173, 0.268);
+    background-image: linear-gradient(to right top, #faffff61 , #04fb775b);
+    /* animation: bg_change 5s infinite; */
     overflow: hidden;
 }
 
@@ -28,14 +29,10 @@
     /* padding: 1rem; */
     height: 50%;
     width: 50%;
-    border: 3px solid rgba(86, 86, 243, 0.714);
+    border: 4px solid rgba(79, 245, 173, 0.274);
     border-radius: 20%;
     overflow: hidden;
-    /* for making around shadow */
-    background-color: rgba(97, 244, 242, 0.082);
-    -webkit-box-shadow: -1px 1px 5px 9px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -1px 1px 5px 9px rgba(0, 0, 0, 0.75);
-    box-shadow: -1px 1px 10px 20px rgba(2, 255, 251, 0.16);
+   
 }
 
 #image_box img {
@@ -99,16 +96,22 @@
     padding: 1rem;
 }
 @media screen and (max-width:500px){
+  .projectContainer{
+    background-image: linear-gradient(to left bottom, #faffff81 , #04b5fb49);
+  }
     #image_box{
         height: 30%;
         margin: 1rem;
         width: 50%;
-        border: 3px solid rgb(249, 211, 39);
+        /* border: 3px solid rgb(249, 211, 39); */
         border-radius: 16%;
         overflow: hidden;
+        box-shadow: none;
     }
     #projectBlock{
+      box-shadow: none;
         margin: 0.4rem;
+        background-image: linear-gradient(to right top, #faffff81 , #04b5fb49);
     }
     .topic{
         font-size: 1.7rem;
