--- a/src/components/Training.css
+++ b/src/components/Training.css
@@ -4,13 +4,15 @@
     border-radius: 2rem;
     margin-top: 2px;
     margin-bottom: 2px;
-    border: 2px solid red;
-    box-shadow: inset 0 0 20px red;
+    /* border: 2px solid red;
+    box-shadow: inset 0 0 20px red; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Ubuntu', sans-serif;
+    background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
+    
 }
 #training_body h2{
    font-size: 2rem;
@@ -45,6 +47,9 @@
     cursor: pointer;
 }
 @media screen and (max-width:500px) {
+    #training_body{
+        background-image: linear-gradient(to right top, #faffff61 , #04fb775b);
+    }
     .training_container h3{
         font-size: 1rem;
     }
