--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 2rem;
     /* border: 2px solid blue; */
-    border-radius: 30px;
+    border-radius: 1.5rem 0.2rem 0rem 0rem;
     box-shadow: inset 0 0 10px #04a4b69b;
     transition: 0.9s;
     background-image: linear-gradient(to right top, #96989861 , #0067305b);
