--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,81 +1,101 @@
-.projectContainer{
-    /* box-shadow: inset 0 0 50px rgba(1, 187, 255, 0.268); */
-    background-image: linear-gradient(to left bottom, #faffff61 , #04fb775b);
-    border-radius: 2rem;
-    margin: 0.5rem 0;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+.projectContainer {
+  /* box-shadow: inset 0 0 50px rgba(1, 187, 255, 0.268); */
+  background-image: linear-gradient(to left bottom, #faffff61, #04fb775b);
+  border-radius: 1.5rem 0.2rem 1.5rem 0.2rem;
+  margin: 0.5rem 0;
+  padding: 1rem 0;
+}
+
+.projectContainer h1 {
+  text-align: center;
+  font-size: 3rem;
+  font-family: 'Ubuntu', sans-serif;
+  margin: 1rem 0;
+  background: -webkit-linear-gradient(#eee, #1e3f3d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #projectBlock {
-    position: relative;
-    margin:  1rem;
-    /* border: 2px solid rgb(255, 118, 49); */
-    border-radius: 3rem;
-    /* min-width: 35rem;
+  position: relative;
+  margin: 1rem;
+  /* border: 2px solid rgb(255, 118, 49); */
+  border-radius: 2rem 0.3rem 2rem 0.3rem;
+  /* min-width: 35rem;
     max-width:60rem ; */
-    width: 40rem;
-    height: 40rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: inset 0 0 50px rgba(79, 245, 173, 0.268);
-    background-image: linear-gradient(to right top, #faffff61 , #04fb775b);
-    /* animation: bg_change 5s infinite; */
-    overflow: hidden;
+  width: 40rem;
+  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: inset 0 0 50px rgba(79, 245, 173, 0.268);
+  background-image: linear-gradient(to right top, #faffff61, #04fb775b);
+  /* animation: bg_change 5s infinite; */
+  overflow: hidden;
 }
 
-#image_box{
-    margin: 2rem;
-    /* padding: 1rem; */
-    height: 50%;
-    width: 50%;
-    border: 4px solid rgba(79, 245, 173, 0.274);
-    border-radius: 20%;
-    overflow: hidden;
-   
+#image_box {
+  margin: 2rem;
+  /* padding: 1rem; */
+  height: 50%;
+  width: 50%;
+  border: 4px solid rgba(79, 245, 173, 0.274);
+  border-radius: 20%;
+  overflow: hidden;
+
 }
 
 #image_box img {
-    height: 100%;
-    width: 100%;
-    /* border-radius: 20%; */
+  height: 100%;
+  width: 100%;
+  /* border-radius: 20%; */
 }
 
 .topic {
-    margin: 1rem;
-    font-size: 2rem;
-    text-shadow: 2px 2px 3px rgb(161, 2, 2);
-    text-align: center;
+  margin: 1rem;
+  font-size: 2rem;
+  text-shadow: 1.4px 1.4px 1px rgb(0, 0, 0);
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  background: -webkit-linear-gradient(#01312c, #ffffff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .progDetail {
-    text-align: center;
-    /* margin: 1rem; */
-    padding: 1rem;
-    font-size: 1rem;
+  text-align: center;
+  /* margin: 1rem; */
+  padding: 1rem;
+  font-size: 1rem;
 }
-.btn-small a{
-    color: black;
-}
-.btn-small {
-   padding: 1rem; 
-   border-radius: 1.5rem;
-   background: transparent;
-   /* color:rgb(0, 0, 0); */
-   font-size: 1rem;
-   /* box-shadow: inset 0 0 10px red; */
-   /* animation: bg_change 5s infinite; */
-   font-family: 'Orbitron', sans-serif;
 
-   /* for tilt animation */
-   position: relative;
+.btn-small a {
+  color: black;
+}
+
+.btn-small {
+  padding: 1rem;
+  border-radius: 1.5rem;
+  background: transparent;
+  /* color:rgb(0, 0, 0); */
+  font-size: 1rem;
+  /* box-shadow: inset 0 0 10px red; */
+  /* animation: bg_change 5s infinite; */
+  font-family: 'Orbitron', sans-serif;
+
+  /* for tilt animation */
+  position: relative;
   overflow: hidden;
   background-image: radial-gradient(circle at 120px 0, #47f1f7a3, #e4fa1c6c);
   animation: tiltImage 3s linear infinite;
 }
-.btn-small::before{
-    z-index: -1;
-    opacity: 0.4;
+
+.btn-small::before {
+  z-index: -1;
+  opacity: 0.4;
   position: absolute;
   top: 0;
   left: 0;
@@ -87,77 +107,269 @@
   animation: gloss 3s linear infinite;
 }
 
-.links{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    padding: 1rem;
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  padding: 1rem;
 }
-@media screen and (max-width:500px){
-  .projectContainer{
-    background-image: linear-gradient(to left bottom, #faffff81 , #04b5fb49);
+
+.linksCenter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  padding: 1rem;
+}
+
+/* for Exam and prepration parts */
+.ExamBox {
+  position: relative;
+  height: 13rem;
+  width: 35rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  /* border: 2px solid red; */
+  background: linear-gradient(0deg, rgb(6, 11, 13) 0%, rgb(38, 95, 105) 100%);
+  border-radius: 1.5rem 0.2rem 1.5rem 0.2rem ;
+  padding: 1rem;
+}
+.tag{
+  position:absolute;
+  /* background: rgb(2,0,36); 
+  background: linear-gradient(90deg,rgba(0,212,255,1)  0%, rgb(99, 99, 175) 35%, rgba(2,0,36,1) 100%); */
+  left: 20rem;
+  bottom:11rem;
+  padding: 0.3rem;
+  font-weight: bold;
+  width: 15rem;
+  text-align: right;
+  border-radius: 5rem;
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(to right, #30CFD0 0%, #804cc0 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.logo {
+  height: 9rem;
+  width: 9rem;
+  border-radius: 50%;
+  border: 3px solid rgb(149, 152, 151);
+}
+
+.ExamDesc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.ExamDesc h1 {
+  font-size: 2rem;
+  margin: 1rem ;
+}
+
+.examLinks {
+  width: 100%;
+  /* border: 2px solid blue; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+/* for button animation */
+.custom-btn {
+  width: 70px;
+  height: 20px;
+  color: #fff;
+  border-radius: 5px 0 5px 0;
+  /* padding: 10px 25px; */
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+    7px 7px 20px 0px rgba(0, 0, 0, .1),
+    4px 4px 5px 0px rgba(0, 0, 0, .1);
+  outline: none;
+}
+
+.btn-3 {
+  /* background: rgb(0, 172, 238); */
+  background: linear-gradient(0deg, rgb(6, 11, 13) 0%, rgb(38, 95, 105) 100%);
+  width: 70px;
+  height: 20px;
+  /* line-height: 42px; */
+  padding: 0;
+  border: none;
+
+}
+
+.btn-3 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-3:before,
+.btn-3:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  transition: all 0.3s ease;
+}
+
+.btn-3:before {
+  height: 0%;
+  width: 2px;
+}
+
+.btn-3:after {
+  width: 0%;
+  height: 2px;
+}
+
+.btn-3:hover {
+  background: transparent;
+  box-shadow: none;
+}
+
+.btn-3:hover:before {
+  height: 100%;
+}
+
+.btn-3:hover:after {
+  width: 100%;
+}
+
+.btn-3 span:hover {
+  font-weight: bold;
+  background: linear-gradient(to right, #30CFD0 0%, #d77a87 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.btn-3 span:before,
+.btn-3 span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  transition: all 0.3s ease;
+}
+
+.btn-3 span:before {
+  width: 2px;
+  height: 0%;
+}
+
+.btn-3 span:after {
+  width: 0%;
+  height: 2px;
+}
+
+.btn-3 span:hover:before {
+  height: 100%;
+}
+
+.btn-3 span:hover:after {
+  width: 100%;
+}
+
+@media screen and (max-width:500px) {
+  .projectContainer {
+    background-image: linear-gradient(to left bottom, #faffff81, #04b5fb49);
   }
-    #image_box{
-        height: 30%;
-        margin: 1rem;
-        width: 50%;
-        /* border: 3px solid rgb(249, 211, 39); */
-        border-radius: 16%;
-        overflow: hidden;
-        box-shadow: none;
-    }
-    #projectBlock{
-      box-shadow: none;
-        margin: 0.4rem;
-        background-image: linear-gradient(to right top, #faffff81 , #04b5fb49);
-    }
-    .topic{
-        font-size: 1.7rem;
-    }
+
+  .projectContainer h1 {
+    font-size: 1.4rem;
+  }
+
+  #image_box {
+    height: 30%;
+    margin: 1rem;
+    width: 50%;
+    /* border: 3px solid rgb(249, 211, 39); */
+    border-radius: 16%;
+    overflow: hidden;
+    box-shadow: none;
+  }
+
+  #projectBlock {
+    box-shadow: none;
+    margin: 0.4rem;
+    background-image: linear-gradient(to right top, #faffff81, #04b5fb49);
+  }
+
+  .topic {
+    font-size: 1.7rem;
+  }
 }
+
+
 @keyframes bg_change {
-    0%{
-        background-image: linear-gradient(to top right, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
-    }
-    33%{
-        background-image: linear-gradient(to bottom right, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
-    }
-    66%{
-        background-image: linear-gradient(to bottom left, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
-    }
-    100%{
-        background-image: linear-gradient(to top left, rgba(0, 255, 255, 0.807),rgba(0, 234, 255, 0.555),rgba(0, 234, 255, 0.259),rgba(0, 234, 255, 0.133),rgba(0, 234, 255, 0.04),rgba(0, 234, 255, 0.11),rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566),rgba(0, 234, 255, 0.785));
-    }
+  0% {
+    background-image: linear-gradient(to top right, rgba(0, 255, 255, 0.807), rgba(0, 234, 255, 0.555), rgba(0, 234, 255, 0.259), rgba(0, 234, 255, 0.133), rgba(0, 234, 255, 0.04), rgba(0, 234, 255, 0.11), rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566), rgba(0, 234, 255, 0.785));
+  }
+
+  33% {
+    background-image: linear-gradient(to bottom right, rgba(0, 255, 255, 0.807), rgba(0, 234, 255, 0.555), rgba(0, 234, 255, 0.259), rgba(0, 234, 255, 0.133), rgba(0, 234, 255, 0.04), rgba(0, 234, 255, 0.11), rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566), rgba(0, 234, 255, 0.785));
+  }
+
+  66% {
+    background-image: linear-gradient(to bottom left, rgba(0, 255, 255, 0.807), rgba(0, 234, 255, 0.555), rgba(0, 234, 255, 0.259), rgba(0, 234, 255, 0.133), rgba(0, 234, 255, 0.04), rgba(0, 234, 255, 0.11), rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566), rgba(0, 234, 255, 0.785));
+  }
+
+  100% {
+    background-image: linear-gradient(to top left, rgba(0, 255, 255, 0.807), rgba(0, 234, 255, 0.555), rgba(0, 234, 255, 0.259), rgba(0, 234, 255, 0.133), rgba(0, 234, 255, 0.04), rgba(0, 234, 255, 0.11), rgba(0, 234, 255, 0.237), rgba(0, 234, 255, 0.566), rgba(0, 234, 255, 0.785));
+  }
 }
 
 @keyframes tiltImage {
-    0% {
-      transform: skewX(6deg);
-    }
-    50% {
-      transform: skewX(-6deg);
-    }
-    100% {
-      transform: skewX(6deg);
-    }
+  0% {
+    transform: skewX(6deg);
   }
 
-  @keyframes gloss {
-    0% {
-      transform: translateX(-60%) skewX(-50deg);
-    }
-    50% {
-      transform: translateX(-40%) skewX(-50deg);
-    }
-    100% {
-      transform: translateX(-60%) skewX(-50deg);
-    }
+  50% {
+    transform: skewX(-6deg);
   }
 
-  button.rec-dot{
-    background-color: rgb(237, 245, 94);
-    /* box-shadow: 0 0 0 2px rgba(248, 0, 0, 0.5); */
+  100% {
+    transform: skewX(6deg);
   }
-  
+}
+
+@keyframes gloss {
+  0% {
+    transform: translateX(-60%) skewX(-50deg);
+  }
+
+  50% {
+    transform: translateX(-40%) skewX(-50deg);
+  }
+
+  100% {
+    transform: translateX(-60%) skewX(-50deg);
+  }
+}
+
+button.rec-dot {
+  background-color: rgb(237, 245, 94);
+  /* box-shadow: 0 0 0 2px rgba(248, 0, 0, 0.5); */
+}
