--- a/src/components/ProgBody.css
+++ b/src/components/ProgBody.css
@@ -44,6 +44,16 @@
     /* animation: bipp_lighting 5s infinite; */
     color: black;
 }
+.projectanimation{
+    position: absolute;
+    opacity: 0.7;
+    bottom: 0;
+    z-index: -1;
+}
+.projectanimation img{
+    height: 100%;
+    width: 100%;
+}
 @media screen and (max-width:700px){
     #progbody{
         background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
@@ -53,5 +63,9 @@
     } 
     .heading p{
         font-size: 1.3rem;
+    }
+    .projectanimation{
+       height: 80%;
+       /* width: 0%; */
     }
 }
