--- a/src/components/AboutContainer.css
+++ b/src/components/AboutContainer.css
@@ -33,6 +33,19 @@
     justify-content: space-around;
     transition: 0.6s;
 }
+.aboutAnimation{
+    position: absolute;
+    bottom: 7rem;
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: -1;
+    opacity: 0.4;
+}
+.aboutAnimation img{
+    width: 50%;
+}
 
 .About_container:hover {
     background-color: rgba(32, 205, 218, 0.071);
@@ -80,9 +93,12 @@
 .about_content p {
     font-size: 1.4rem;
     /* text-align: center; */
-    margin: 1rem;
-    padding: 1rem;
-    color: #c6f993;
+    /* margin: 1rem; */
+    padding: 0.5rem;
+    /* color: #c6f993; */
+    background: linear-gradient(to right, #551818 0%, #150000 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 /* education part is here */
@@ -166,6 +182,9 @@
         align-items: center;
         padding: 0.5rem;
         background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
+    }
+    .aboutAnimation{
+        display: none;
     }
 
     .about_content {
