--- a/src/components/SkillSet.css
+++ b/src/components/SkillSet.css
@@ -95,7 +95,7 @@ box-shadow: -1px 1px 5px 15px rgb(97 244 241 / 16%);
 margin: 1rem;
 padding: 0.5rem;
 border: 2px solid pink;
-border-radius: 3rem;
+border-radius: 1rem 2rem 1rem 2rem;
 height: 13rem;
 box-shadow: inset 0 0 30px #7cf4ff9a;
 display: flex;
@@ -103,6 +103,7 @@ flex-direction: row;
 justify-content: space-between;
 align-items: center;
 /* transition: 0.7s; */
+background: linear-gradient(0deg, rgb(6, 11, 13) 0%, rgb(38, 95, 105) 100%);
 }
 .subject h2{
     text-shadow: 2px 2px 3px red;
@@ -126,6 +127,9 @@ align-items: center;
 margin: 0.3rem;
 padding: 1rem;
 border-radius: 3rem;
+background: linear-gradient(to right, #30CFD0 0%, #804cc0 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 
 }
 .subject p:hover{
@@ -147,7 +151,7 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     display: flex;
     /* border: 2px solid red; */
     background-color: #6cf5fc0a;
-    border-radius: 2rem;
+    border-radius: 1rem 2rem 1rem 2rem;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -164,7 +168,10 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
 .leetcode h2{
     padding: 1rem;
     font-size: 4rem;
-    animation: bipp_lighting 5s infinite;
+    /* animation: bipp_lighting 5s infinite; */
+    background: linear-gradient(to right, #30CFD0 0%, #804cc0 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .leetcode p{
     font-size: 2rem;
@@ -217,6 +224,7 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     } 
     .subject{
         height: 10rem;
+        border-radius: 0.5rem 1rem 0.5rem 1rem;
     }
     .subject p{
         margin: 1rem;
@@ -233,6 +241,9 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     .leetcode h2{
         padding: 1rem;
         font-size: 2rem;
+        background: linear-gradient(to right, #611818 0%, #1c2200 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
     .leetcode p{
         font-size: 1rem;
