--- a/src/components/AboutContainer.css
+++ b/src/components/AboutContainer.css
@@ -9,6 +9,8 @@
     margin-bottom: 0.4rem;
     border-radius: 2rem;
     transition: 0.6s;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .bgvdo{
     position: fixed;
@@ -105,7 +107,7 @@
 .education {
     width: 100%;
     height: 100%;
-    padding: 2rem;
+    padding: 0rem;
     font-family: 'Playball', cursive;
     /* border: 2px solid red; */
 }
@@ -113,20 +115,23 @@
 .education h1 {
     font-size: 3rem;
     text-align: center;
-    text-shadow: 2px 3px 5px rgba(110, 243, 214, 0.337);
-    color: #84262fef;
+    text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.337);
+    color: #04d29bef;
 }
 
 .digree {
-    padding-top: 1rem;
+    margin: 1rem 0.2rem;
+    border-radius: 1rem;
+    padding: 0.2rem 1rem;
     display: flex;
     flex-direction: column;
+    box-shadow: inset 0 0 10px black;
 }
 
 .digree h2 {
     font-size: 2rem;
     text-shadow: 2px 3px 5px rgba(110, 243, 214, 0.337);
-    color: #a11422ef;
+    color: #1f4c51ef;
 }
 
 .digree p {
@@ -146,6 +151,33 @@
 }
 
 /* education part end here */
+@media screen and (max-width : 1400px) {
+    .About_container h2 {
+        font-size: 3rem;
+    }
+    .about_content p {
+        font-size : 1rem
+    }
+    .aboutAnimation{
+        bottom: -8rem;
+        width: 100%;
+    }
+    .aboutAnimation img{
+        width: 80%;
+    }
+    .digree h2 {
+        font-size: 1.5rem;
+    }
+    .digree p {
+        font-size: 1rem;
+    }
+    .degpass {
+        margin-bottom: 0.4rem;
+    }
+    .education h1 {
+        font-size: 2.5rem;
+    }
+}
 @media screen and (max-width:900px) {
     .About_container h2 {
         font-size: 3rem;
