--- a/src/components/SkillSet.css
+++ b/src/components/SkillSet.css
@@ -14,10 +14,13 @@
     padding: 1rem;
     transition: 0.6s;
     font-family: 'Orbitron', sans-serif;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 #skillHeading{
-    text-shadow: 2px 2px 3px red;
+    color: rgb(6, 64, 85);
+    text-shadow: 2px 2px 3px rgb(0, 255, 208);
     font-size: 3rem;
     margin: 1rem;
     text-align: center;
@@ -96,7 +99,7 @@ margin: 1rem;
 padding: 0.5rem;
 border: 2px solid pink;
 border-radius: 1rem 2rem 1rem 2rem;
-height: 13rem;
+height: auto;
 box-shadow: inset 0 0 30px #7cf4ff9a;
 display: flex;
 flex-direction: row;
@@ -178,7 +181,7 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     animation: bipp_lighting 5s infinite;
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1400px) {
    
     .skillBody{
         flex-direction: column;
@@ -187,6 +190,18 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
     }
     .circularSkill{
         grid-template-columns: auto auto auto;
+    }
+    .skillContainer{
+        height: 20rem;
+        width: 20rem;
+    }
+    .circular_progress{
+        height: 10rem;
+        width: 10rem;
+    }
+    .circular_progress::before{
+        height: 8rem;
+        width: 8rem;
     }
 
     .leetimage{
@@ -275,6 +290,13 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
         text-align: center;
         background-image: linear-gradient(to right top, #faffff61 , #04b5fb5b);
     }
+    .skill_set{
+        font-size: 1rem;
+    }
+    #skillHeading{
+        font-size: 2rem;
+        margin: 0.2rem;
+    }
     .circular_progress{
         height: 6rem;
         width: 6rem;
@@ -302,7 +324,8 @@ box-shadow: -1px 1px 5px 11px rgb(97 244 241 / 16%);
         font-size: 0.6rem;
     } 
     .subject{
-        height: 7rem;
+        margin: 0.5rem;
+        height: auto;
     }
     .subject p{
         margin: 0;
